--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/fiber": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.23.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
